--- a/TODO
+++ b/TODO
@@ -1,11 +1,12 @@
-support deletion in btree
+deletion in btree
+test lmdb with reconcilation testing framework
 update rust impl
-do edits to article
-
 randomisation
-figure out how to merge deno branch
+do edits to article
 
 ? coalesce Idlist ranges in buildOutput
   - at least empty ones! for example when P1=1 P2=0 P3=0
 
 ? is 16 * 2 optimal in splitRange
+
+? figure out how to merge deno branch
