--- a/TODO
+++ b/TODO
@@ -1,9 +1,11 @@
-deletion in btree
 test LMDB with reconcilation testing framework
-update rust impl
-randomisation
 do edits to article
 update docs for API, how to use btree/LMDB
+strfry integration
+
+update rust impl
+
+randomisation
 
 ? coalesce Idlist ranges in buildOutput
   - at least empty ones! for example when P1=1 P2=0 P3=0
