--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
-strfry integration
+subrange testing
+integrate subrange with strfry
+perf optimisation with adjacent getItems
 
 
 range randomisation
